--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.5.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
