--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#1440 dk = 24 Saat
+springJWT.app.jwtExpirationMs = 86400000
+springJWT.app.jwtSecret=qsWSe3678.asdERd23
